# IP_Internals

./: .gitignore  README.md  pyproject.toml
outputs/exp_1/judgements/: baseline_multilingual.jsonl  baseline_multilingual_summary.json  steered_french_lambda0.2_multilingual.jsonl  steered_french_lambda0.2_multilingual_summary.json  steered_french_lambda0.4_multilingual.jsonl  steered_french_lambda0.4_multilingual_summary.json  steered_french_lambda0.6_multilingual.jsonl  steered_french_lambda0.6_multilingual_summary.json  steered_french_lambda0.8_multilingual.jsonl  steered_french_lambda0.8_multilingual_summary.json  steered_french_lambda0_multilingual.jsonl  steered_french_lambda0_multilingual_summary.json  steered_french_lambda1_multilingual.jsonl  steered_french_lambda1_multilingual_summary.json  steered_multilingual.jsonl  steered_multilingual_summary.json  steered_spanish_lambda0.2_multilingual.jsonl  steered_spanish_lambda0.2_multilingual_summary.json  steered_spanish_lambda0.4_multilingual.jsonl  (+21 more)
scripts/: apply_steering.py  download_model.py  finetune.py  generate_steering_vector.py  generate_test_rollouts.py  judge_language.py  judge_multilingual.py  prepare_finetune_data.py  run_lambda_sweep.sh
scripts/exp_1/: make_combined_vector.py  run_lambda_sweep.sh  run_lambda_sweep_french.sh  run_lambda_sweep_french_minus_spanish.sh  run_lambda_sweep_spanish_negative.sh
src/: apply_steering.py  data_utils.py  download_model.py  finetune.py  generate_steering_vector.py  generate_test_rollouts.py  judge_language.py  judge_multilingual.py  prepare_finetune_data.py
(+20 files in other folders)
